Applied patch #2948635: Extended Kalman Filter localization with vector map
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9007 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/localization/CMakeLists.txt
+++ b/server/drivers/localization/CMakeLists.txt
@@ -1,4 +1,5 @@
 ADD_SUBDIRECTORY (amcl)
+ADD_SUBDIRECTORY (ekfvloc)
 
 PLAYERDRIVER_OPTION (fakelocalize build_fakelocalize ON)
 PLAYERDRIVER_ADD_DRIVER (fakelocalize build_fakelocalize SOURCES fakelocalize.cc)
